# arcgis-and-python-beyond-the-basics-and-into-the-wild-ds-2024

./: README.md
Content Cloning/: Cloning via Backup.ipynb
Packaging/my_gis_debugging_tool/: demo.ipynb  pyproject.toml  readme.md
Packaging/my_gis_debugging_tool/src/my_gis_debugging_tool/: __init__.py  _global_settings.py  hooks.py  request_debugging.py
Packaging/my_gis_debugging_tool/src/my_gis_debugging_tool.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Request Response Hooks/: Requests Response Web Hooks.ipynb
Standalone Executables/: app.py  app.spec  desktop.py  gis_inventory.py
Standalone Executables/static/DataTables/: datatables.min.css
Standalone Executables/templates/: get_token.html  index copy.html
